# brickbreak

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  brickbreak  cmake_install.cmake  config.h  config.h.in
images/: Small-soldier.ase
src/: Ball.cpp  Ball.hpp  Game.cpp  Game.hpp  Paddle.cpp  Paddle.hpp  main.cpp
